# qdp-jit

./: .gitignore  .gitmodules  BUILDING_CMake.md  BUILDING_with_CMake.md  CMakeLists.txt  INSTALL  Makefile.in  NEWS  QDPXXConfig.cmake.in  README  configure  configure.ac  configure.orig  configure.rej  pack_libdevice.sh  patch_libdevice.sh  ptx_ex2.ptx  qdp++-config.in
PETE/: OperatorTags.h  QDPOperators.h  QDPOps.in  makefile
PETE/Tools/: MakeOperators  MakeOperators.cpp  PeteOps.in
autom4te.cache/: output.0  requests  traces.0  traces.1
examples/: CMakeLists.txt  Makefile.am  Makefile.in  dslashm_w.cc  examples.h  linalg1.cc  sftmom.cc  sftmom.h  t_blas_g5_2.cc  t_blas_g5_3.cc  t_db.cc  t_dslashm.cc  t_foo.cc  t_iprod.cc  t_linalg.cc  t_mesons.cc  t_qdp.cc  unittest.h
include/: #qdp_jitf_copymask.h#  #qdp_llvm.h#  #qdp_realityjit.h#  .#qdp_jitf_copymask.h  .#qdp_llvm.h  .#qdp_map.h  .#qdp_realityjit.h  CMakeLists.txt  Makefile.am  Makefile.in  QDPOperators.h  cuda_special.h  qdp.h  qdp_alloc_cache.h  qdp_allocator.h  qdp_autotuning.h  qdp_basejit.h  qdp_basereg.h  qdp_cache.h  qdp_config.h  qdp_config_internal.h.cmake.in  qdp_config_internal.h.in  qdp_config_internal.h.in~  qdp_cuda.h  qdp_cuda_allocator.h  qdp_datalayout.h  qdp_db_imp.h  qdp_db_stub.h  qdp_deep_log.h  qdp_default_allocator.h  qdp_defs.h  qdp_deviceparams.h  qdp_dispatch.h  qdp_dyn_functions.h  qdp_expr_writer.h  qdp_forward.h  qdp_functions.h  qdp_functions_special.h  qdp_globalfuncs.h  qdp_globalfuncs_subtype.h  (+128 more)
include/PETE/: Combiners.h  ForEach.h  ForEachIn.h~  ForEachInOrderStatic.h  OperatorTags.h  OperatorTags.h.save  TreeNodes.h
include/custom_kernels/: custom_kernels.h  stream_local_inner_product.h
install_scripts/KNL/: configure_usqcd.sh  llvm-cmake-gcc.sh  llvm-cmake-intel.sh
lib/: CMakeLists.txt  Makefile.am  Makefile.am.orig  Makefile.in  cuda_special.cc  cuda_special_quarkContract13.cu  cuda_special_quarkContract14.cu  cuda_special_quarkContract23.cu  cuda_special_quarkContract24.cu  func_acos_f32.ptx  func_acos_f64.ptx  func_asin_f32.ptx  func_asin_f64.ptx  func_atan2_f32.ptx  func_atan2_f64.ptx  func_atan_f32.ptx  func_atan_f64.ptx  func_ceil_f32.ptx  func_cos_f32.ptx  func_cos_f64.ptx  func_cosh_f32.ptx  func_cosh_f64.ptx  func_exp_f32.ptx  func_exp_f64.ptx  func_log10_f32.ptx  func_log10_f64.ptx  func_log_f32.ptx  func_log_f64.ptx  func_pow_f32.ptx  func_pow_f64.ptx  func_sin_f64.ptx  func_sinh_f32.ptx  func_sinh_f64.ptx  func_sqrt_f32.ptx  func_tan_f32.ptx  func_tan_f64.ptx  func_tanh_f32.ptx  func_tanh_f64.ptx  qdp.cc  qdp_alloc_cache.cc  (+60 more)
lib/ptx/: func_sin_f32.ptx
other_libs/: Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  unittest.h
